# Checkpoint8

checkpoint8_auxiliary_files/: README.md
checkpoint8_auxiliary_files/rb1_ros2_description/: CMakeLists.txt  README.md  package.xml
checkpoint8_auxiliary_files/rb1_ros2_description/config/: lift_controllers_custom.yaml  rb1_controller.yaml
checkpoint8_auxiliary_files/rb1_ros2_description/launch/: rb1_ros2_lift_xacro.launch.py  rb1_ros2_xacro.launch.py
checkpoint8_auxiliary_files/rb1_ros2_description/xacro/: rb1_ros2_base.urdf.xacro
lift_controller/: CMakeLists.txt  lift_controller.xml  package.xml
lift_controller/include/lift_controller/: lift_controller.hpp
lift_controller/src/: lift_controller.cpp
